[gd_scene load_steps=10 format=3 uid="uid://dpruoc10tcsh5"]

[ext_resource type="Script" path="res://scripts/character/mobsters/mobster_revised.gd" id="1_w1g6n"]
[ext_resource type="SpriteFrames" uid="uid://bhasc4hba2oa3" path="res://sprites/spritesheets/spriteframes/characters/base/red_mobster_base.tres" id="2_qkhc6"]
[ext_resource type="PackedScene" uid="uid://ri414jkdjpq4" path="res://entities/characters/character_base.tscn" id="3_bnvdq"]
[ext_resource type="Texture2D" uid="uid://0d3n5esom4o4" path="res://sprites/lights/small_shadow.png" id="3_wq4dt"]
[ext_resource type="PackedScene" uid="uid://biwoi1biy4ynx" path="res://entities/characters/NPC/AI state machine/ai_state_machine.tscn" id="4_54gx6"]
[ext_resource type="PackedScene" uid="uid://bfnemblcg0xd0" path="res://entities/characters/NPC/AI state machine/common states/idle.tscn" id="6_aktij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68bjs"]
size = Vector2(19.9688, 13.2813)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_ldxv5"]
points = PackedVector2Array(0, -32, 0, 32, 192, 128, 192, -128)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cdne8"]
radius = 2.0
height = 19.7857

[node name="red_mobster" type="RigidBody2D" groups=["mobster"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 17
mass = 1000.0
gravity_scale = 0.0
lock_rotation = true
linear_damp = 5.0
script = ExtResource("1_w1g6n")
base_spriteframes = ExtResource("2_qkhc6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0.015625, 7.35938)
shape = SubResource("RectangleShape2D_68bjs")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 32.0
radius = 64.0
neighbor_distance = 1000.0
max_neighbors = 5
time_horizon_agents = 5.0

[node name="vision" type="ShapeCast2D" parent="."]
self_modulate = Color(1, 1, 0, 1)
shape = SubResource("ConvexPolygonShape2D_ldxv5")
target_position = Vector2(0, 0)
collision_mask = 65

[node name="shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 1)
texture = ExtResource("3_wq4dt")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 81

[node name="character_base" parent="." instance=ExtResource("3_bnvdq")]
position = Vector2(0, -1)
base_spriteframes = ExtResource("2_qkhc6")
facing_dir = "right"

[node name="head_shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = 1.57079
scale = Vector2(2.73187, 1.213)
shape = SubResource("CapsuleShape2D_cdne8")

[node name="ai_state_machine" parent="." instance=ExtResource("4_54gx6")]
initial_state = NodePath("idle")

[node name="idle" parent="ai_state_machine" instance=ExtResource("6_aktij")]

[connection signal="stand" from="ai_state_machine/idle" to="." method="_on_stand_dir"]
